--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.475.0",
